--- a/AZ500.md
+++ b/AZ500.md
@@ -9,9 +9,20 @@ Please bear this in mind as exam materials are updated continually but may recie
 - [Worksheet](https://github.com/gvnshtn/ExamGuides/blob/main/AZ500.md#worksheet)
   - [Manage identity and access (30-35%)](https://github.com/gvnshtn/ExamGuides/blob/main/AZ500.md#manage-identity-and-access-30-35)
     - [Manage Azure Active Directory (Azure AD) identities](https://github.com/gvnshtn/ExamGuides/blob/main/AZ500.md#manage-azure-active-directory-azure-ad-identities)
+    - [Manage secure access by using Azure AD](https://github.com/gvnshtn/ExamGuides/blob/main/AZ500.md#manage-secure-access-by-using-azure-ad)
+    - [Manage application access](https://github.com/gvnshtn/ExamGuides/blob/main/AZ500.md#manage-application-access)
+    - [Manage access control](https://github.com/gvnshtn/ExamGuides/blob/main/AZ500.md#manage-access-control)
   - [Implement platform protection (15-20%)](https://github.com/gvnshtn/ExamGuides/blob/main/AZ500.md#implement-platform-protection-15-20)
+    - [Implement advanced network security](https://github.com/gvnshtn/ExamGuides/blob/main/AZ500.md#implement-advanced-network-security)
+    - [Configure advanced security for compute](https://github.com/gvnshtn/ExamGuides/blob/main/AZ500.md#configure-advanced-security-for-compute)
   - [Manage security operations (25-30%)](https://github.com/gvnshtn/ExamGuides/blob/main/AZ500.md#manage-security-operations-25-30)
+    - [Configure centralized policy management](https://github.com/gvnshtn/ExamGuides/blob/main/AZ500.md#configure-centralized-policy-management)
+    - [Configure and manage threat protection](https://github.com/gvnshtn/ExamGuides/blob/main/AZ500.md#configure-and-manage-threat-protection)
+    - [Configure and manage security monitoring solutions](https://github.com/gvnshtn/ExamGuides/blob/main/AZ500.md#configure-and-manage-security-monitoring-solutions)
   - [Secure data and applications (25–30%)](https://github.com/gvnshtn/ExamGuides/blob/main/AZ500.md#secure-data-and-applications-2530)
+    - [Configure security for storage](https://github.com/gvnshtn/ExamGuides/blob/main/AZ500.md#configure-security-for-storage)
+    - [Configure security for data](https://github.com/gvnshtn/ExamGuides/blob/main/AZ500.md#configure-security-for-data)
+    - [Configure and manage Azure Key Vault](https://github.com/gvnshtn/ExamGuides/blob/main/AZ500.md#configure-and-manage-azure-key-vault)
 
 ## Resources
 * Exam AZ-500: Microsoft Azure Security Technologies
