--- a/AZ500.md
+++ b/AZ500.md
@@ -41,7 +41,7 @@ Please bear this in mind as exam materials are updated continually but may recie
 What works for some may not work for others. But I can recommend three things:
 
 1. Read '[Make It Stick: The Science of Successful Learning](https://www.amazon.com/Make-Stick-Science-Successful-Learning/dp/0674729013/ref=sr_1_1)' (ISBN:9780674729018).
-2. Print this page out and check off the docs as you move through the list.
+2. Fork, or print this page out and check off the docs as you move through the list.
 3. As you go through the docs, have a test tenant in place and DO the things. Make sure you understand them as you go, don't just robotically click buttons assuming you'll remember what it is you did and why. You'll need that for the test.
 
 ## Worksheet
