--- a/AZ500.md
+++ b/AZ500.md
@@ -33,7 +33,7 @@ Please bear this in mind as exam materials are updated continually but may recie
   *  [AZ-500 part2: Implement platform protection](https://docs.microsoft.com/en-us/learn/paths/implement-platform-protection/)
   *  [AZ-500 part 3: Secure your data and applications](https://docs.microsoft.com/en-us/learn/paths/secure-your-data-applications/)
   *  [AZ-500 part 4: Manage security operation](https://docs.microsoft.com/en-us/learn/paths/manage-security-operation/)
-* Mark O'Shea exam guide has been updated to reflect the new material:
+* Mark O'Shea has a solid exam guide that reflects the September 29th 2021 update:
   *  [Preparing for the AZ-500 Microsoft Azure Security Technologies Exam (September 2021 Update)](https://intunedin.net/2021/10/19/preparing-for-the-az-500-microsoft-azure-security-technologies-exam-september-2021-update/)
 * The [Mark Grimes](https://twitter.com/markbgrimes) is worth a watch to help you gauge how much time you will need to prepare and what kind of process to follow.
   * [AZ-500 C.E.R.T YouTube Playlist](https://youtube.com/playlist?list=PLVY1cokqlbC5C5EnjTTJAZFpX9I4FT8Uy)
